# RustProjects

./: .gitignore  README.md
advent_of_code_2021/d1/q1/src/: main.rs
advent_of_code_2021/d1/q2/src/: main.rs
advent_of_code_2021/d10/q1/src/: main.rs
advent_of_code_2021/d10/q2/src/: main.rs
advent_of_code_2021/d11/q2/src/: main.rs
advent_of_code_2021/d12/q1/: Cargo.toml
advent_of_code_2021/d12/q1/src/: main.rs
advent_of_code_2021/d12/q2/src/: main.rs
advent_of_code_2021/d13/q1/src/: main.rs
advent_of_code_2021/d15/q1/: Cargo.toml
advent_of_code_2021/d16/q2/: Cargo.toml
advent_of_code_2021/d18/q1/: Cargo.toml
advent_of_code_2021/d3/q1/: :q
advent_of_code_2021/d8/: README.md
advent_of_code_2021/d8/q2/: Cargo.toml
advent_of_code_2021/d9/q1/: Cargo.toml
advent_of_code_2021/d9/q2/: Cargo.toml
advent_of_code_2022/day1/src/: lib.rs
advent_of_code_2022/day11/src/: lib.rs
advent_of_code_2022/day12/: Cargo.toml
advent_of_code_2022/day12/src/: lib.rs
advent_of_code_2022/day2/src/: lib.rs
advent_of_code_2022/day22/src/: lib.rs
advent_of_code_2022/day25/src/: lib.rs
advent_of_code_2022/day3/src/: lib.rs
advent_of_code_2022/day4/src/: lib.rs
advent_of_code_2022/day5/: input.txt
advent_of_code_2022/day5/src/: lib.rs
advent_of_code_2022/day6/: Cargo.toml
advent_of_code_2022/day6/src/: lib.rs
advent_of_code_2022/day7/src/: lib.rs
web-server/: Cargo.toml  README.md
web-server/src/: errors.rs  lib.rs  main.rs
zk_benchmark/: Cargo.toml
zk_benchmark/src/: VAnchor.rs  assembly_sol.rs  lib.rs  main.rs  mod.rs  vanchor.rs
(+27 files in other folders)
