[package]
name = "zk_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", version="0.6.0", features = ["legacy", "rustls"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
hex = { version = "0.4", default-features = false }
# just to make it compile on linux where the openssl is not available.
# until ethers-rs solve this issue: https://github.com/gakonst/ethers-rs/issues/325
native-tls = { version = "^0.2", features = ["vendored"] }
clap = { version = "3.0.14" }
